# thoughtstream

./: .gitignore  LICENSE  README.md  config.yaml.example  debug_test.py  pyproject.toml  run.ps1  setup.py
.cursor/: worktrees.json
scripts/: install.ps1  install.sh
src/thoughtstream/: __init__.py  cli.py  config.py  daemon.py
tests/: test_config.py  test_daemon.py
thoughtstream/: config.py  crypto.py  daemon.py  db.py  intelligence.py
thoughtstream.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
thoughtstream/capture/: browser.py  clipboard.py  hotkeys.py  terminal.py  vscode.py
